--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobx-react-matchmedia",
   "license": "MIT",
-  "version": "0.0.0-semantically-released",
+  "version": "2.0.0-b1",
   "author": "Claudio Savino <claudio.savino@me.com> (https://twitter.com/foxhound87)",
   "description": "A React HOC with mediaqueries for responsive layout.",
   "homepage": "https://www.npmjs.com/package/mobx-react-matchmedia",
